Fixed 2318: Language dropdown was not visible

--- a/pum/css/pum.css
+++ b/pum/css/pum.css
@@ -13589,13 +13589,12 @@ em, i {
       float: right;
       vertical-align: top;
       width: 100px;
-      padding-top: 6px;
+      margin: 8px;
       position: relative; }
     .l-topbar .language-dropdown {
       float: right;
       vertical-align: top;
       width: 50px;
-      margin-left: 15px;
       padding-top: 9px;
       position: relative; }
       .l-topbar .language-dropdown select {
