--- a/pum/scss/layout/_topbar.scss
+++ b/pum/scss/layout/_topbar.scss
@@ -71,14 +71,13 @@
             float: right;
             vertical-align: top;
             width: 100px;
-            padding-top: 6px;
+            margin: 8px;
             position: relative;
         } // ./ low-bandwidth
         .language-dropdown {
             float: right;
             vertical-align: top;
             width: 50px;
-            margin-left: 15px;
             padding-top: 9px;
             position: relative;
             select {
